scripts/kubernetes/default/drupal-loadbalancer.yaml
---
apiVersion: v1
kind: Service
metadata: 
  name: drupal-service
  namespace: drupal
spec: 
  ports: 
    - name: http
      port: 80
      protocol: TCP
  selector: 
    app: drupal
  type: LoadBalancer
