scripts/kubernetes/default/drupal-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: drupal-ingress
  namespace: drupal
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: drupal.XXX.X.XX.XXX.nip.io
    http:
      paths:
        - path: /
          backend:
            serviceName: drupal-service
            servicePort: 80
